envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: grpc_services
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: grpc_services
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: grpc_services
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: user-service.golang-micro.svc.cluster.local
                      port_value: 50051
              - endpoint:
                  address:
                    socket_address:
                      address: product-service.golang-micro.svc.cluster.local
                      port_value: 50052
              - endpoint:
                  address:
                    socket_address:
                      address: checkout-service.golang-micro.svc.cluster.local
                      port_value: 50053
